# cmatrix_generator

./: CMakeLists.txt  dense_matrix_100x100.mtx  load_darshan.sh  load_darshan_for_ops.sh  load_darshan_ior.sh  main.cpp
cmake/: FindTACO.cmake
copy/: luser_cmatrix_generator_id1713341-1713341_4-10-56473-5196084970189113701_1.darshan  luser_cmatrix_generator_id1713342-1713342_4-10-56473-1252584497966337124_1.darshan  luser_cmatrix_generator_id1713343-1713343_4-10-56473-14612965573631566505_1.darshan  luser_cmatrix_generator_id1713344-1713344_4-10-56473-13790879005757582847_1.darshan  out
plot_scripts/: darshan_parser.sh  plot_darshan_roofline.py
write/: luser_cmatrix_generator_id1712972-1712972_4-10-55723-9718515533799812401_1.darshan  luser_cmatrix_generator_id1712973-1712973_4-10-55723-377205692809982176_1.darshan  luser_cmatrix_generator_id1712974-1712974_4-10-55723-16238641015048116506_1.darshan  luser_cmatrix_generator_id1712976-1712976_4-10-55728-3741087005381841178_1.darshan  out
write_copy/: luser_cmatrix_generator_id1709567-1709567_4-10-52302-6047845001072697096_1.darshan  luser_cmatrix_generator_id1709568-1709568_4-10-52302-18444170334936199009_1.darshan  luser_cmatrix_generator_id1709569-1709569_4-10-52302-11430519988698562045_1.darshan  luser_cmatrix_generator_id1709575-1709575_4-10-52308-2505164650356658995_1.darshan
